--- a/contacts.html
+++ b/contacts.html
@@ -139,20 +139,21 @@
     <div class="glass-box contacts-cover">
       <!-- Instagram -->
       <a class="contact-icon-btn" href="https://www.instagram.com/charlie_ff/" target="_blank" title="Instagram">
-        <!-- Instagram SVG -->
-        <svg viewBox="0 0 48 48">
-          <rect x="9" y="9" width="30" height="30" rx="8" />
-          <circle cx="24" cy="24" r="8.2" />
-          <circle cx="33.2" cy="14.8" r="2.2" />
-        </svg>
+        <!-- Instagram SVG, centrata meglio -->
+<svg viewBox="0 0 48 48">
+  <rect x="9" y="9" width="30" height="30" rx="8"/>
+  <circle cx="24" cy="24" r="8.2"/>
+  <circle cx="34" cy="14" r="2.2"/>
+</svg>
       </a>
       <!-- Email -->
       <button class="contact-icon-btn" id="copy-mail-btn" title="Copia indirizzo email">
-        <!-- Mail SVG -->
-        <svg viewBox="0 0 48 48">
-          <rect x="8" y="13" width="32" height="22" rx="6"/>
-          <polyline points="8,13 24,28 40,13"/>
-        </svg>
+        
+<!-- Mail SVG, centrata meglio -->
+<svg viewBox="0 0 48 48">
+  <rect x="8" y="13" width="32" height="22" rx="6"/>
+  <polyline points="8,13 24,28 40,13"/>
+</svg>
       </button>
     </div>
     <!-- Popup Copiato -->
