--- a/contacts.html
+++ b/contacts.html
@@ -99,6 +99,11 @@
         width: 30px;
         height: 30px;
       }
+      .contact-icon-btn svg {
+  display: block;
+  margin: 0 auto;
+  padding: 7px 0 0 0; /* aumenta solo il top padding per tutte */
+}
     }
   </style>
 </head>
