--- a/contacts.html
+++ b/contacts.html
@@ -147,25 +147,24 @@
   <!-- CENTRO PAGINA -->
   <div class="main-center-container">
     <div class="glass-box contacts-cover">
-      <!-- Instagram -->
-      <a class="contact-icon-btn" href="https://www.instagram.com/charlie_ff/" target="_blank" title="Instagram">
-        <!-- Instagram SVG, centrata meglio -->
-<svg viewBox="0 0 48 48">
-  <rect x="9" y="9" width="30" height="30" rx="8"/>
-  <circle cx="24" cy="24" r="8.2"/>
-  <circle cx="34" cy="14" r="2.2"/>
-</svg>
-      </a>
-      <!-- Email -->
-      <button class="contact-icon-btn" id="copy-mail-btn" title="Copia indirizzo email">
-        
-<!-- Mail SVG, centrata meglio -->
-<svg viewBox="0 0 48 48">
-  <rect x="8" y="13" width="32" height="22" rx="6"/>
-  <polyline points="8,13 24,28 40,13"/>
-</svg>
-      </button>
-    </div>
+      <div class="glass-box contacts-cover">
+  <!-- Instagram -->
+  <a class="contact-icon-btn" href="https://www.instagram.com/charlie_ff/" target="_blank" title="Instagram">
+    <svg viewBox="0 0 48 48">
+      <rect x="6" y="6" width="36" height="36" rx="10"/>
+      <circle cx="24" cy="24" r="11"/>
+      <circle cx="34" cy="16" r="2.7"/>
+    </svg>
+  </a>
+  <!-- Email -->
+  <button class="contact-icon-btn" id="copy-mail-btn" title="Copia indirizzo email">
+    <svg viewBox="0 0 48 48">
+      <rect x="6" y="14" width="36" height="20" rx="6"/>
+      <polyline points="6,14 24,30 42,14"/>
+    </svg>
+  </button>
+</div>
+
     <!-- Popup Copiato -->
     <div id="copied-popup">Indirizzo e-mail copiato!</div>
   </div>
