--- a/contacts.html
+++ b/contacts.html
@@ -32,42 +32,37 @@
       min-width: 350px;
     }
     .contact-icon-btn {
-  width: 84px;
-  height: 84px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 24px;
-  background: rgba(30,40,60,0.41); /* meno trasparente */
-  box-shadow: 0 2px 16px rgba(30,40,60,0.13);
-  cursor: pointer;
-  transition: transform 0.14s, background 0.15s;
-  border: none;
-  outline: none;
-  position: relative;
-}
-
-.contact-icon-btn:hover {
-  transform: scale(1.08) translateY(-2px);
-  background: rgba(80,140,255,0.22);
-}
-
-.contact-icon-btn svg {
-  width: 50px;   /* più grande */
-  height: 50px;  /* più grande */
-  display: block;
-  margin: 0 auto;
-  fill: none;
-  stroke: #fff;
-  stroke-width: 2.5px;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-}
-
-.contact-icon-btn:active svg {
-  stroke: #70caff;
-}
-
+      width: 84px;
+      height: 84px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 24px;
+      background: rgba(30,40,60,0.35);
+      box-shadow: 0 2px 16px rgba(30,40,60,0.13);
+      cursor: pointer;
+      transition: transform 0.14s, background 0.15s;
+      border: none;
+      outline: none;
+      position: relative;
+    }
+    .contact-icon-btn:hover {
+      transform: scale(1.08) translateY(-2px);
+      background: rgba(80,140,255,0.20);
+    }
+    .contact-icon-btn svg {
+      width: 38px;
+      height: 38px;
+      fill: none;
+      stroke: #fff;
+      stroke-width: 2.3px;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      transition: stroke 0.15s;
+    }
+    .contact-icon-btn:active svg {
+      stroke: #70caff;
+    }
     #copied-popup {
       position: fixed;
       left: 50%;
@@ -101,8 +96,8 @@
         height: 62px;
       }
       .contact-icon-btn svg {
-        width: 44px;
-        height: 44px;
+        width: 30px;
+        height: 30px;
       }
       .contact-icon-btn svg {
   display: block;
@@ -147,24 +142,25 @@
   <!-- CENTRO PAGINA -->
   <div class="main-center-container">
     <div class="glass-box contacts-cover">
-      <div class="glass-box contacts-cover">
-  <!-- Instagram -->
-  <a class="contact-icon-btn" href="https://www.instagram.com/charlie_ff/" target="_blank" title="Instagram">
-    <svg viewBox="0 0 48 48">
-      <rect x="6" y="6" width="36" height="36" rx="10"/>
-      <circle cx="24" cy="24" r="11"/>
-      <circle cx="34" cy="16" r="2.7"/>
-    </svg>
-  </a>
-  <!-- Email -->
-  <button class="contact-icon-btn" id="copy-mail-btn" title="Copia indirizzo email">
-    <svg viewBox="0 0 48 48">
-      <rect x="6" y="14" width="36" height="20" rx="6"/>
-      <polyline points="6,14 24,30 42,14"/>
-    </svg>
-  </button>
-</div>
-
+      <!-- Instagram -->
+      <a class="contact-icon-btn" href="https://www.instagram.com/charlie_ff/" target="_blank" title="Instagram">
+        <!-- Instagram SVG, centrata meglio -->
+<svg viewBox="0 0 48 48">
+  <rect x="9" y="9" width="30" height="30" rx="8"/>
+  <circle cx="24" cy="24" r="8.2"/>
+  <circle cx="34" cy="14" r="2.2"/>
+</svg>
+      </a>
+      <!-- Email -->
+      <button class="contact-icon-btn" id="copy-mail-btn" title="Copia indirizzo email">
+        
+<!-- Mail SVG, centrata meglio -->
+<svg viewBox="0 0 48 48">
+  <rect x="8" y="13" width="32" height="22" rx="6"/>
+  <polyline points="8,13 24,28 40,13"/>
+</svg>
+      </button>
+    </div>
     <!-- Popup Copiato -->
     <div id="copied-popup">Indirizzo e-mail copiato!</div>
   </div>
