--- a/contacts.html
+++ b/contacts.html
@@ -162,7 +162,7 @@
       </button>
     </div>
     <!-- Popup Copiato -->
-    <div id="copied-popup">Indirizzo e-mail copiato!</div>
+    <div id="copied-popup">E-mail address copied!</div>
   </div>
 
   <div class="row one-bottom center">
