--- a/contacts.html
+++ b/contacts.html
@@ -152,7 +152,7 @@
 </svg>
       </a>
       <!-- Email -->
-      <button class="contact-icon-btn" id="copy-mail-btn" title="Copia indirizzo email">
+      <button class="contact-icon-btn" id="copy-mail-btn" title="Copy e-mail address">
         
 <!-- Mail SVG, centrata meglio -->
 <svg viewBox="0 0 48 48">
