--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a href="project6.html">HYPNO SPIRAL</a>
     <a href="project7.html">SUNFLOWER</a>
     <a href="project8.html">LOCATION OF A CIRCLE</a>
-    <a href="project9.html">DYNAMIC QUAD-SPLIT METER</a>
+    <a href="project9.html">QUAD-SPLIT METER</a>
   </div>
 </div>
 
