--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="four columns project-card">
     <a href="project9.html">
       <img src="images/grey.png" class="scale-with-grid">
-      <h5>DYNAMIC QUAD-SPLIT METER</h5>
+      <h5>QUAD-SPLIT METER</h5>
     </a>
   </div>
 </div>
