--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <br><br>
         I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.
         <br><br>
-        <b>Su questo sito trovi:</b>
+        <b>On this site you will find:</b>
       </p>
       <ul>
         <li>Generative sketches written in p5.js</li>
